2007-10-27 Justin Palmer <justin@activereload.net>
	
	* test/test_controller_generator.rb,
	  rucola_generators/controller,
	  rucola_generators/controller/USAGE,
	  rucola_generators/controller/controller_generator.rb,
	  rucola_generators/controller/templates/controller_template.rb.erb,
 	  rucola_generators/controller/templates/test_controller_template.rb.erb:
	
	- Added controller generator to generate generic controllers that inherit from 
	  NSObject.
    - Updated the usage file for window_controller generator with basic instructions.
	
2007-10-27 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  TODO,
	  app_generators/rucola/rucola_generator.rb,
	  app_generators/rucola/templates/script,
	  app_generators/rucola/templates/script/plugin,
	  test/test_rucola_generator.rb:

	Added script/plugin which allows you to install plugins from a svn repo.
	It will get plugin_index from the Rucola repo, this lists plugins in the
	Rucola repo for easy install.

2007-10-27 Eloy Duran <e.duran@superalloy.nl>

	* Rakefile,
	  TODO,
	  lib/rucola/rucola_support/acts_as/notifiable.rb,
	  test/test_acts_as_notifiable.rb:

	- Changed output of tests to spec format.
	- #notify_on now also takes a symbol which will be expanded.
	  So :application_did_finish_launching becomes NSApplicationDidFinishLaunchingNotification.
	- Added #notification_prefix which allows you to register notification name prefix shortcuts.
	  So :application_... becomes :app_... (this one is added by default.)

2007-10-26 Eloy Duran <e.duran@superalloy.nl>

	* branches/plugins/SACrashReporter/lib/SACrashReporter.rb,
	  branches/plugins/SACrashReporter/test/test_SACrashReporter.rb,
	  branches/plugins/SACrashReporter/License:

	- Added the MIT license to SACrashReporter.
	- Fixed a bug with 1.8.2, which does not support Net::HTTP #post_form.
	  Reported by Satoshi Nakagawa.

2007-10-26 Eloy Duran <e.duran@superalloy.nl>

	* branches/plugins/SACrashReporter/Rakefile,